--- a/index.html
+++ b/index.html
@@ -1,300 +1,73 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trading Dashboard</title>
-  <style>
-    :root {
-      --bg-light: #f9fafc;
-      --bg-dark: #111827;
-      --text-light: #333;
-      --text-dark: #f3f4f6;
-      --card-bg-light: #ffffff;
-      --card-bg-dark: #1f2937;
-      --primary: #3b82f6;
-      --primary-dark: #2563eb;
-      --border-light: #e5e7eb;
-      --border-dark: #374151;
-    }
-
-    [data-theme="dark"] {
-      background: var(--bg-dark);
-      color: var(--text-dark);
-    }
-
-    [data-theme="dark"] input,
-    [data-theme="dark"] select,
-    [data-theme="dark"] button,
-    [data-theme="dark"] .log,
-    [data-theme="dark"] .display-saldo,
-    [data-theme="dark"] .rekap-profit,
-    [data-theme="dark"] table {
-      background: var(--card-bg-dark);
-      color: var(--text-dark);
-      border-color: var(--border-dark);
-    }
-
-    [data-theme="dark"] th {
-      background-color: #374151;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding: 20px;
-      margin: 0;
-      background: var(--bg-light);
-      color: var(--text-light);
-      transition: all 0.3s ease-in-out;
-    }
-    h1, h2 {
-      color: inherit;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 15px 0;
-      background: var(--card-bg-light);
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    th, td {
-      border: 1px solid var(--border-light);
-      padding: 12px;
-      text-align: center;
-      font-size: 14px;
-    }
-    th {
-      background-color: #f3f4f6;
-      font-weight: 600;
-    }
-    input, select, button {
-      padding: 10px;
-      margin: 5px 0;
-      width: 100%;
-      box-sizing: border-box;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
-      font-size: 14px;
-      transition: all 0.3s ease;
-    }
-    input:focus, select:focus {
-      border-color: var(--primary);
-      outline: none;
-      box-shadow: 0 0 0 3px rgba(96, 165, 250, 0.3);
-    }
-    button {
-      background: var(--primary);
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      transition: transform 0.2s, background 0.3s;
-    }
-    button:hover {
-      background: var(--primary-dark);
-      transform: scale(1.02);
-    }
-    form {
-      background: var(--card-bg-light);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      margin-bottom: 20px;
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    .log {
-      margin-top: 10px;
-      font-size: 15px;
-      background: var(--card-bg-light);
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    .display-saldo, .rekap-profit {
-      font-size: 16px;
-      font-weight: bold;
-      background: var(--card-bg-light);
-      padding: 15px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    .rekap-profit span {
-      display: inline-block;
-      margin-bottom: 4px;
-      transition: all 0.3s ease-in-out;
-    }
-    #chart-container {
-      margin: 20px 0;
-      background: var(--card-bg-light);
-      border-radius: 10px;
-      padding: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    footer {
-      margin-top: 30px;
-      text-align: center;
-      font-size: 13px;
-      color: #999;
-    }
-    .toggle-theme {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: var(--primary);
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 14px;
-      z-index: 999;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    @media (max-width: 768px) {
-      table, thead, tbody, th, td, tr {
-        display: block;
-      }
-      thead tr {
-        display: none;
-      }
-      td {
-        border: none;
-        position: relative;
-        padding-left: 50%;
-        margin-bottom: 10px;
-        background: var(--card-bg-light);
-        border-bottom: 1px solid #eee;
-      }
-      td::before {
-        content: attr(data-label);
-        position: absolute;
-        left: 10px;
-        top: 10px;
-        font-weight: bold;
-        color: #666;
-      }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>📊 Trading Panel</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <button class="toggle-theme" onclick="toggleTheme()">Switch Theme</button>
-  <h1>Trading Dashboard</h1>
+  <div class="container">
+    <h1>📈 Trading Dashboard</h1>
 
-  <div class="display-saldo">Saldo Awal: <span id="startBalance">1250.00</span> USDC</div>
-  <div class="rekap-profit">
-    📈 <strong>Rekap Profit:</strong><br>
-    ✅ Total Trade: <span id="totalTrade">0</span><br>
-    🟢 Win Trade: <span id="winTrade">0</span><br>
-    🔴 Loss Trade: <span id="lossTrade">0</span><br>
-    📊 Winrate: <span id="winrate">0%</span><br>
-    💹 Total Pips: <span id="totalPips">0</span> pips<br>
-    💰 Total USDC: <span id="totalUsdc">0.00</span> USDC
+    <section class="balance">
+      <p>Saldo Awal: <strong><span id="startBalance">1250.00</span> USDc 💰</strong></p>
+    </section>
+
+    <form id="tradeForm" class="trade-form">
+      <select name="pair" required>
+        <option value="XAUUSDc">XAUUSDc</option>
+        <option value="BTCUSDc">BTCUSDc</option>
+      </select>
+      <input type="number" name="layer" placeholder="Layer" required />
+      <input type="number" name="lot" placeholder="Lot (ex: 0.01)" step="0.01" required />
+      <select name="position" required>
+        <option value="BUY">BUY</option>
+        <option value="SELL">SELL</option>
+      </select>
+      <input type="text" name="reason" placeholder="Alasan Entry" required />
+      <input type="number" name="entryPrice" placeholder="Harga Entry (ex: 3340.50)" step="0.01" required />
+      <button type="submit">+ Tambah Entry</button>
+    </form>
+
+    <div class="rekap">
+      <h3>📊 Rekap Trading</h3>
+      <p>Total Trade: <strong id="totalTrade">0</strong></p>
+      <p>✅ Win: <strong id="winTrade">0</strong></p>
+      <p>❌ Loss: <strong id="lossTrade">0</strong></p>
+      <p>🏆 Winrate: <strong id="winrate">0%</strong></p>
+      <p>📏 Total Pips: <strong id="totalPips">0.0</strong></p>
+      <p>💸 Total USDc: <strong id="totalUsdc">0.00</strong></p>
+    </div>
+
+    <h2>📍 Posisi Terbuka</h2>
+    <table id="openTrades">
+      <thead>
+        <tr>
+          <th>#</th><th>Pair</th><th>Layer</th><th>Lot</th><th>Posisi</th>
+          <th>Entry</th><th>Waktu</th><th>Alasan</th><th>Close</th><th>Hapus</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <h2>📘 History Trading</h2>
+    <table id="history">
+      <thead>
+        <tr>
+          <th>#</th><th>Pair</th><th>Layer</th><th>Lot</th><th>Posisi</th>
+          <th>Entry</th><th>Close</th><th>Open</th><th>Close</th><th>Pips</th><th>USDC</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <h2>📉 Live Chart XAUUSD</h2>
+    <div class="tradingview-widget">
+      <iframe src="https://www.tradingview.com/embed-widget/symbol-overview/?locale=en&symbols=XAUUSD" width="100%" height="300" frameborder="0"></iframe>
+    </div>
   </div>
 
-  <div id="chart-container">
-    <h2>Live Chart XAUUSD</h2>
-    <div id="tradingview_widget"></div>
-  </div>
-
-  <form id="tradeForm" autocomplete="off">
-    <label>Pair:</label>
-    <select name="pair">
-      <option value="XAUUSDc">XAUUSDc</option>
-      <option value="BTCUSDc">BTCUSDc</option>
-    </select>
-    <label>Layer (keberapa entry):</label>
-    <input type="number" name="layer" placeholder="Contoh: 1 untuk layer pertama" required />
-    <label>Lot (jumlah kontrak):</label>
-    <input type="number" name="lot" step="0.01" placeholder="Contoh: 0.05" required />
-    <label>Posisi:</label>
-    <select name="position">
-      <option value="BUY">BUY</option>
-      <option value="SELL">SELL</option>
-    </select>
-    <label>Alasan Entry:</label>
-    <input type="text" name="reason" placeholder="Contoh: Breakout MA50" required />
-    <label>Harga Entry (xx.xx):</label>
-    <input type="number" name="entryPrice" step="0.01" placeholder="Contoh: 1950.25" required />
-    <button type="submit">Tambah Entry</button>
-  </form>
-
-  <div class="log" id="logBox"></div>
-
-  <h2>Open Trades</h2>
-  <table id="openTrades">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Pair</th>
-        <th>Layer</th>
-        <th>Lot</th>
-        <th>Posisi</th>
-        <th>Entry</th>
-        <th>Waktu Open</th>
-        <th>Alasan</th>
-        <th>Close</th>
-        <th>Hapus</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <h2>History Trades</h2>
-  <table id="history">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Pair</th>
-        <th>Layer</th>
-        <th>Lot</th>
-        <th>Posisi</th>
-        <th>Entry</th>
-        <th>Close</th>
-        <th>Waktu Open</th>
-        <th>Waktu Close</th>
-        <th>Pips</th>
-        <th>Profit (USDC)</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <footer>© 2025 Trading Dashboard. All rights reserved.</footer>
-
-  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <script>
-    function toggleTheme() {
-      const html = document.documentElement;
-      const current = html.getAttribute("data-theme") || "light";
-      const next = current === "light" ? "dark" : "light";
-      html.setAttribute("data-theme", next);
-    }
-  </script>
-  <script type="text/javascript">
-    new TradingView.widget({
-      "width": "100%",
-      "height": 500,
-      "symbol": "OANDA:XAUUSD",
-      "interval": "1",
-      "timezone": "Etc/UTC",
-      "theme": "light",
-      "style": "1",
-      "locale": "en",
-      "toolbar_bg": "#f1f3f6",
-      "enable_publishing": false,
-      "allow_symbol_change": true,
-      "container_id": "tradingview_widget"
-    });
-  </script>
   <script src="script.js"></script>
 </body>
 </html>
