--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
           <option value="BUY">BUY</option>
           <option value="SELL">SELL</option>
         </select>
-        <input type="text" name="reason" placeholder="Alasan Entry" required />
-        <input type="number" step="0.01" name="entryPrice" placeholder="Posisi Entry" required />
-        <button type="submit">+ Tambah Entry</button>
+        <input type="number" step="0.01" name="entryPrice" placeholder="Price Entry" required />
+        <button type="submit">Tambah Entry</button>
       </div>
     </form>
 
@@ -33,7 +32,7 @@
     <table id="openTrades">
       <thead>
         <tr>
-          <th>No</th><th>Pair</th><th>Layer</th><th>Lot</th><th>Posisi</th><th>Entry</th><th>Waktu</th><th>Alasan</th><th>Close</th><th>Aksi</th>
+          <th>No</th><th>Pair</th><th>Layer</th><th>Lot</th><th>Posisi</th><th>Entry</th><th>Waktu</th><th>Close</th><th>Aksi</th>
         </tr>
       </thead>
       <tbody></tbody>
