--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <option value="BUY">BUY</option>
         <option value="SELL">SELL</option>
       </select>
-      <input type="number" step="0.01" id="entryPrice" placeholder="Harga Entry (xxxx.xx)" required />
+      <input type="number" step="0.01" id="entryPrice" placeholder="Harga Entry" required />
       <button type="submit">Tambah Posisi</button>
     </form>
 
